package com.designpatterns.model;

public class ShapeNotSelectedException extends Throwable {}
